tests/src/frontend/typechecking/invalid/overridable_const7.sk
base class B1 {
  const c1: void = void;
}

base class B2 {
  const c1: void = void;
}

class D1() extends B1, B2 {
  const c1 from B2;
}
